# boxboxnow

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-image.sh  docker-compose.yml  start-container.sh  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
include/: .gitkeep
src/: main  main.cpp
